# PokerHandEvaluator

./: Cargo.toml  README.md
benches/: bench_main.rs
src/: big_luts.rs  cli.yml  constants.rs  display.rs  eval.rs  file.rs  lib.rs  luts.rs  main.rs  models.rs
