[package]
name = "poker_evaluator2"
version = "0.1.0"
authors = ["Alex6323 <Al3k5@protonmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.2.8"

[[bench]]
name = "bench_main"
harness = false

[lib]
name = "hand_eval"
path = "src/lib.rs"

[[bin]]
name = "poker_eval"
path = "src/main.rs"
